[package]
name = "libmodbus-sys"
version = "0.4.2"
authors = ["Stefan Müller <co@zzeroo.com>"]
links = "modbus"
build = "build.rs"
keywords = ["modbus", "libmodbus"]
documentation = "http://zzeroo.github.io/libmodbus-rs/libmodbus_rs/index.html"
repository = "https://github.com/zzeroo/libmodbus-rs.git"
homepage = "http://zzeroo.github.io/libmodbus-rs"
description = """
FFI bindings to the libmodbus C library.
"""
license = "LGPL-2.1" # same as libmodbus

[lib]
name = "libmodbus_sys"
path = "lib.rs"
crate-type = ["rlib"]

[dependencies]
libc = "0.2"

[build-dependencies]
bindgen = "0.29.0"
gcc = "0.3"
git2 = { version = "0.6", default-features = false, features = ["https"] }